fix alignment of education heading

--- a/src/components/pages/ResumePrint/ResumePrint.module.css
+++ b/src/components/pages/ResumePrint/ResumePrint.module.css
@@ -122,7 +122,7 @@
 
 .educationHeading {
   position: absolute;
-  top: -1.5px;
+  top: 2px;
   margin-bottom: 0;
   font-size: 0.8rem;
 }
